--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Snapshot.cs" />
-    <Compile Include="TimeHandler.cs" />
+    <Compile Include="Synthesis.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
