MergeSearch class added
use MergeSearch.byTime(list/array, time) with an array or list of DP's
to find the DP at a desired time(double).

--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="DataToSerialize.cs" />
     <Compile Include="GraphTools.cs" />
+    <Compile Include="MergeSearch.cs" />
     <Compile Include="SaveLoadTools.cs" />
     <Compile Include="Datahandler.cs" />
     <Compile Include="DataPoint.cs" />
