Fixed and renmaed SortTools
=|

--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -46,7 +46,7 @@
     <Compile Include="LoadMenu.Designer.cs">
       <DependentUpon>LoadMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="MergeSearch.cs" />
+    <Compile Include="SortTools.cs" />
     <Compile Include="SaveLoadTools.cs" />
     <Compile Include="Datahandler.cs" />
     <Compile Include="DataPoint.cs" />
