--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUI.resx">
