--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -46,6 +46,11 @@
     <Compile Include="LoadMenu.Designer.cs">
       <DependentUpon>LoadMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SortTools.cs" />
     <Compile Include="SaveLoadTools.cs" />
     <Compile Include="Datahandler.cs" />
@@ -61,7 +66,9 @@
     <Compile Include="Serializer.cs" />
     <Compile Include="Snapshot.cs" />
     <Compile Include="Synthesis.cs" />
-    <Compile Include="P2GraphPanel\MasterGraphPanel.cs" />
+    <Compile Include="P2GraphPanel\MasterGraphPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="P2GraphPanel\Graph.cs" />
     <Compile Include="P2GraphPanel\yAxis.cs" />
     <Compile Include="P2GraphPanel\xAxis.cs" />
@@ -85,6 +92,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoadMenu.resx">
       <DependentUpon>LoadMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
