--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -43,6 +43,8 @@
     </Compile>
     <Compile Include="DataToSerialize.cs" />
     <Compile Include="GraphTools.cs" />
+    <Compile Include="helpTextController.cs" />
+    <Compile Include="loadHelpText.cs" />
     <Compile Include="LoadMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,7 +117,5 @@
   </Target>
   -->
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="viewCalculations\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
