--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{74336642-2599-4FCD-AFDE-3918A9AA4027}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>P2</RootNamespace>
     <AssemblyName>P2</AssemblyName>
