Nu med tabs på graferne
Jeg har tilføjet tabs og ryddet lidt op i koden - dokumentation følger!

--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -43,10 +43,10 @@
       <DependentUpon>CalcForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DataToSerialize.cs" />
-    <Compile Include="GraphButton.cs">
+    <Compile Include="GraphHandler.cs" />
+    <Compile Include="GraphPage.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GraphHandler.cs" />
     <Compile Include="helpTextController.cs" />
     <Compile Include="LoadMenu.cs">
       <SubType>Form</SubType>
