Enums.cs og dokumentation of GraphHandler
Jeg tilføjede en separat fil til enums og dokumenterede metoderne i
GraphHandler'en

--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -43,6 +43,7 @@
       <DependentUpon>CalcForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DataToSerialize.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="GraphHandler.cs" />
     <Compile Include="GraphPage.cs">
       <SubType>Component</SubType>
