Nu med opdateret model!

--- a/P2/P2/P2.csproj
+++ b/P2/P2/P2.csproj
@@ -36,6 +36,7 @@
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AmmoniaCalc.cs" />
     <Compile Include="CalcForm.cs">
       <SubType>Form</SubType>
     </Compile>
