Klassediagram over P2Graph

--- a/P2/P2Graph/P2Graph.csproj
+++ b/P2/P2Graph/P2Graph.csproj
@@ -54,6 +54,9 @@
     <Compile Include="xAxis.cs" />
     <Compile Include="yAxis.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="P2GraphClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
